--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="" />
+        <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>myDiscBox</title>
         <!-- CSS -->
